--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,35 +1,34 @@
-<h3>个人资料</h3>
+<h3>profile</h3>
+
+{%for myTask in myTasks%}
+{{myTask}} <br>
+{%endfor%}
+
 <table border="1">
     <tr>
-        <th>key</th>
-        <th>user</th>
-        <th>avader</th>
-        <th>point</th>
+        <th>user_id</th>
+        <th>profile_id</th>
+        <th>username</th>
+        <th>points</th>
     </tr>
     <tr>
-        <td>{{ pf.key }}</td>
-        <td>{{ pf.user }}</td>
-        <td>{{ pf.avader }}</td>
-        <td>{{ pf.point }}</td>        
+        <td>{{ user.id }}</td>
+        <td>{{ profile.id }}</td>
+        <td>{{ user.username }}</td>
+        <td>{{ profile.points }}</td>        
     </tr>
 </table>
-
-<h3>我发布的任务</h3>
 <table border="1">
     <tr>
-        <th>key</th>
-        <th>name</th>
-        <th>desc</th>
-        <th>reward</th>
-        <th>detail</th>
+        <th>user_id</th>
+        <th>profile_id</th>
+        <th>username</th>
+        <th>points</th>
     </tr>
-    {% for x in t1 %}
     <tr>
-        <td>{{ x.key }}</td>
-        <td>{{ x.name }}</td>
-        <td>{{ x.description }}</td>
-        <td>{{ x.reward }}</td>
-        <td><a href="{% url 'detail' x.key %}">click me</a></td>
+        <td>{{ user.id }}</td>
+        <td>{{ profile.id }}</td>
+        <td>{{ user.username }}</td>
+        <td>{{ profile.points }}</td>        
     </tr>
-    {% endfor %}
 </table>
